# cc-statistics

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_CN.md  README_EN.md  README_JA.md  README_KO.md  pyproject.toml
.github/scripts/: pr_review.py
.github/workflows/: build-macos.yml  pr-review.yml
CCStats/: CCStatsApp.swift  FloatingPanel.swift  SessionAnalyzer.swift  StatsViewModel.swift
CCStats/Views/: Components.swift  CursorStatsView.swift  (+1 more)
cc_stats/: __init__.py  analyzer.py  cli.py  exporter.py  formatter.py  git_integration.py  hooks.py  notifier.py  parser.py  pricing.py  rate_limiter.py  reporter.py  sources.py  version_checker.py  webhook.py
cc_stats_app/: __init__.py  __main__.py  api.py  server.py
cc_stats_web/: __init__.py  __main__.py  server.py
desktop/cc-stats-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/cc-stats-tauri/src-tauri/src/: api_process.rs  external_browser.rs  health.rs  main.rs  notifications.rs  tray.rs  window.rs
docs/: awesome_pr.md  demo.cast  demo_script.sh  launch_posts.md
scripts/: sync_version.py
skill/: SKILL.md
tests/: test_app_entrypoint.py  test_bridge_collector.py  test_bridge_state_store.py  test_cache_stats.py  test_cli_version.py  test_cross_midnight.py  test_date_filter.py  test_git_integration.py  test_hooks.py  test_pricing.py  test_rate_limiter.py  test_skill_stats.py  test_sources.py  test_subagent_sessions.py  test_token_cache.py  test_token_format.py  test_version_checker.py  test_web_dashboard_markup.py  test_web_entrypoint.py  test_web_server.py  test_windows_tauri_shell.py
(+42 files in other folders)
