[package]
name = "cc-stats-tauri"
version = "0.1.0"
description = "Windows tray shell for CC Statistics"
authors = ["androidZzT"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-notification = "2.3.3"
